--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "realrashid/sweet-alert": "^7.0",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
